kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: meu-site-web-service
spec:
  selector:
    app: meu-site-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080  # Exposing on NodePort for external access
  type: NodePort  # Changed from LoadBalancer to NodePort for local testing
