kubernetes/ingress.yml
# ingress-with-cloud-armor.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meu-site-web-ingress
  annotations:
    kubernetes.io/spec.ingress.class: "gce"
    cloud.google.com/backend-config: '{"default": "meu-site-security-config"}'
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: meu-site-web-service-internal  # Service ClusterIP
            port:
              number: 80
---
